Fix Fedora 6 deposit processing and run logging